force-app/main/default/objects/DTOrderLineJunction__c/DTOrderLineJunction__c.object-meta.xml
<CustomObject>
    <label>DTOrderLineJunction</label>
    <nameField>
        <displayFormat>DTOL-{00000000}</displayFormat>
        <label>DTOrderLineJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTOrderLineJunctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>