force-app/main/default/objects/DTOrderLineJunction__c/fields/DTTermsJunction__c.field-meta.xml
<CustomField>
    <fullName>DTTermsJunction__c</fullName>
    <label>DTTermsJunction</label>
    <referenceTo>DTTermsJunction__c</referenceTo>
    <relationshipLabel>DTOrderLineJunctions</relationshipLabel>
    <relationshipName>DTOrderLineJunctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>