force-app/main/default/objects/DTOrderLineJunction__c/fields/ff_Deal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ff_Deal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Transaction</label>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>DTOrderLineJunctions</relationshipLabel>
    <relationshipName>DTOrderLineJunctions</relationshipName>
    <type>Lookup</type>
</CustomField>