force-app/main/default/objects/DTOrderLineJunction__c/fields/ff_Is_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>ff_Is_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoiced?</label>
    <type>Checkbox</type>
</CustomField>