force-app/main/default/objects/DTOrderLineJunction__c/fields/ff_OL_Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>ff_OL_Gross_Cost__c</fullName>
    <label>OL Gross Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>