force-app/main/default/objects/DTOrderLineJunction__c/fields/Merchant_Terms__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Terms</label>
    <referenceTo>Merchant_Terms__c</referenceTo>
    <relationshipLabel>DTOrderLineJunctions</relationshipLabel>
    <relationshipName>DTOrderLineJunctions</relationshipName>
    <type>Lookup</type>
</CustomField>