force-app/main/default/objects/DTOrderLineJunction__c/fields/TAD_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order_Name__c</fullName>
    <formula>ff_Order_Line__r.TAD_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAD Order Name</label>
    <type>Text</type>
</CustomField>